--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# SvelteKit generated
 .DS_Store
 node_modules
 /build
@@ -8,3 +9,6 @@ node_modules
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Custom
+static/
