--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fontsource/fira-sans": "^5.0.5",
+		"normalize.css": "^8.0.1"
+	}
 }
